--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "cloudflare-ddns"
-version = "0.1.0"
-edition = "2018"
+version = "0.1.1"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 reqwest = "0.11.8"
-cloudflare = "0.9.1"
+cloudflare = { path = "./cloudflare-rs/cloudflare/" }
 
 serde = "1"
 serde_json = "1.0"
@@ -16,5 +16,7 @@ trust-dns-resolver = "*"
 
 log = "0.4.14"
 env_logger = "0.9.0"
+
+tokio = { version = "1", features = ["full"] }
 
 clap = { version = "3.0.0", features = ["derive"] }
