--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cloudflare-ddns"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,10 +12,11 @@ cloudflare = { path = "./cloudflare-rs/cloudflare/" }
 serde = "1"
 serde_json = "1.0"
 
+local-ip-address = "0.6.1"
 trust-dns-resolver = "*"
 
-log = "0.4.14"
-env_logger = "0.9.0"
+log = "0.4"
+env_logger = "0.11"
 
 tokio = { version = "1", features = ["full"] }
 
