--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "cloudflare-ddns"
 version = "0.2.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 reqwest = "0.11.8"
-cloudflare = { path = "./cloudflare-rs/cloudflare/" }
+cloudflare = "0.14.0"
 
 serde = "1"
 serde_json = "1.0"
